--- a/index.html
+++ b/index.html
@@ -7,136 +7,66 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <!-- Header -->
+
     <header class="header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#video">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="mynavbar cursor">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li onmouseover="mostrarFondo()" onmouseout="ocultarFondo()"><a href="uber.html">Uber</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
-    <!-- End Header -->
 
-    <div class="">
-        <video class="video" autoplay loop muted src="/src/public/ballon.mp4"></video>
+    <div class="logo">
+        <img src="./src/public/logo.svg" />
     </div>
 
-    <!-- Section 1 -->
-    <section class="section1">
-        <h2>Uber</h2>
-        <div class="section1-subtitle">
-            <div>
-                <p>Project Type</p>
-                <p>Product</p>
-            </div>
-            <div>
-                <p>Stage</p>
-                <p>Leader</p>
-            </div>
-            <div>
-                <p>Deliverables</p>
-                <p>Strategy & Research, Product Design, Frontend Engineering</p>
-            </div>
-        </div>
-    </section>
-    <!-- End Section 1 -->
+    <img class="background fondo" id="fondo" src="./src/public/map.webp" alt="">
 
-
-    <div class="">
-        <video class="video" autoplay loop muted src="./src/public/uber_header.mp4"></video>
+    <div class="vhContainer uberMenu">
+        <h1 class="menu_title">Uber</h1>
     </div>
 
-    <!-- Section 2 -->
-    <section class="section2">
-        <div class="section2-first scroll-reveal container">
-            <h3><span>Introduction</span></h3>
-            <p>
-                <span>
-                    We have a rich history with Uber, collaborating closely over the
-                    years. With their team focused on growth in the early days,
-                    Metalab came in to accelerate feature development and unify their
-                    visual language. Since then, we've touched nearly every product in
-                    their vast ecosystem.
-                </span>
-            </p>
-        </div>
-    </section>
-    <!-- End Section 2 -->
-
-    <!-- Section 3 -->
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <img class="section3-image" src="./src/public/uber1.webp" alt="uber" />
-            </div>
-            <div class="col">
-                <video class="section3-video" autoplay loop muted src="./src/public/uber_street.mp4"></video>
-            </div>
-        </div>
+    <div class="vhContainer uberMenu">
+        <p class="menu_desc1">Product Design, Engineering <h1/>
     </div>
-    <!-- End Section 3 -->
 
-    <!-- Section 4 -->
-    <section class="section4">
-        <div>
-            <h4><span>Uber</span></h4>
-            <p><span>Accelerating the research and development of new features for millions of riders and
-                    drivers.</span></p>
-        </div>
-    </section>
-    <!-- End Section 4 -->
+    <div class="vhContainer uberMenu">
+        <img class="menu_image" src="./src/public/uber_menu.webp" alt="uber menu">
+    </div>
 
-    <div id="video" class="">
-        <video class="video" autoplay loop muted src="./src/public/uber_evolution_mobile.mp4"></video>
+    <div class="content uberMenu">
+        <p class="content_menu_desc1">A long term parthnership </p>
+    </div>
 
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./src/public/carrusel1.webp" class="d-block w-20 carousel-test" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./src/public/carrusel2.webp" class="d-block w-20 carousel-test" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+    <div class="content menu">
+        <p class="content_desc">sence 2006, we've helped the most innovative starups and reputable brands design, build,
+            and ship
+            products
+            woth
+            talking about.</p>
+    </div>
 
-        <!-- script -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <div class="content menu">
+        <p class="content_title">We make <span>interfaces</span></p>
+    </div>
+
+    <div class="video_container">
+        <video class="" autoplay loop muted src="./src/public/ballon.mp4">
+    </div>
+
+
+
+    <!-- script -->
+    <script src="./src/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
