--- a/contact.html
+++ b/contact.html
@@ -7,35 +7,66 @@
     <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/contact.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Contant</title>
 </head>
 
 <body>
     <div class="menu">
-        <header>
 
+        <!-- Header -->
+        <header class="header">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav mynavbar">
+                            <li class="nav-item">
+                                <a class="nav-link active mynavbar" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./uber.html">Uber</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <nav class="logo2">
+                <a href="./index.html"><img src="./src/public/logo.svg" /></a>
+            </nav>
         </header>
+        <!-- End Header -->
 
+        <!-- Section 1 -->
         <div class="subContainer">
-            <div class="section1">
-                <h1>Say hey.</h1>
-                <p>Not sure where to start?</p>
-                <p>Tell us about your product, your timeline, how you heard about us, and where you’re located.</p>
-                <p>We read every message. So, thanks in advance for making it a good one.</p>
-                <p><a href="#">Looking for a job?</a></p>
-            </div>
+            <section class="section1">
+                <div class="card">
+                    <div class="card-body">
+
+                        <video class="video" loop autoplay muted src="./src/public/preloader.mp4"></video>
+                        <h1>Say hey.</h1>
+                        <p>Not sure where to start?</p>
+                        <p>Tell us about your product, your timeline, how you heard about us, and where you’re located.
+                        </p>
+                        <p>We read every message. So, thanks in advance for making it a good one.</p>
+                        <p><a href="#">Looking for a job?</a></p>
+                    </div>
+                </div>
+            </section>
+            <!-- End Section 1 -->
 
             <div class="section2">
 
                 <form class="row g-3 inputs">
                     <div class="col-md-6">
-                        <label for="inputEmail4" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="inputPassword4" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="inputPassword4">
+                        <label for="inputEmail4" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="inputEmail4">
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Address</label>
@@ -50,27 +81,8 @@
                         <label for="inputCity" class="form-label">City</label>
                         <input type="text" class="form-control" id="inputCity">
                     </div>
-                    <div class="col-md-4">
-                        <label for="inputState" class="form-label">State</label>
-                        <select id="inputState" class="form-select">
-                            <option selected>Choose...</option>
-                            <option>...</option>
-                        </select>
-                    </div>
-                    <div class="col-md-2">
-                        <label for="inputZip" class="form-label">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
-                    </div>
                     <div class="col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="gridCheck">
-                            <label class="form-check-label" for="gridCheck">
-                                Check me out
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button class="button">Send</button>
                     </div>
                 </form>
 
