--- a/uber.html
+++ b/uber.html
@@ -15,27 +15,29 @@
 
     <!-- Header -->
     <header class="header">
-        <a href="./index.html"><img src="./src/public/logo.svg" /></a>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mynavbar">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active mynavbar" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#video">Features</a>
+                            <a class="nav-link" href="./uber.html">Uber</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
+        </nav>
+        <nav class="logo2">
+            <a href="./index.html"><img src="./src/public/logo.svg" /></a>
         </nav>
     </header>
     <!-- End Header -->
