adding footer and setting parameters

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Metalab</title>
     <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/index.css">
 
@@ -33,7 +33,8 @@
     </div>
 
     <div class="vhContainer uberMenu">
-        <p class="menu_desc1">Product Design, Engineering <h1/>
+        <p class="menu_desc1">Product Design, Engineering
+            <h1 />
     </div>
 
     <div class="vhContainer uberMenu">
@@ -41,7 +42,7 @@
     </div>
 
     <div class="content uberMenu">
-        <p class="content_menu_desc1">A long term parthnership </p>
+        <p class="content_menu_desc1">A long term partnership spanning across virtuality every product experience</p>
     </div>
 
     <div class="content menu">
