--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="menu">
 
         <!-- Header -->
-        <header class="header">
+        <header id="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -23,9 +23,10 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav mynavbar">
+
+                        <ul class="navbar-nav mynavbar2">
                             <li class="nav-item">
-                                <a class="nav-link active mynavbar" aria-current="page" href="./index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./uber.html">Uber</a>
@@ -90,12 +91,14 @@
 
         </div>
     </div>
-
-
-
-
-
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p><span>created by <a target="_blank"
+                    href="https://www.linkedin.com/in/cristian-donnachie-6706aa241/">@c-donnachie</a></span></p>
+    </footer>
+    <!-- End Footer -->
 
 </body>
 
