--- a/uber.html
+++ b/uber.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Uber</title>
     <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/uber.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+    <header id="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -22,9 +22,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mynavbar">
+
+                    <ul class="navbar-nav mynavbar2">
                         <li class="nav-item">
-                            <a class="nav-link active mynavbar" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./uber.html">Uber</a>
@@ -69,7 +70,7 @@
 
     <!-- Section 2 -->
     <section class="section2">
-        <div class="section2_first scroll-reveal container">
+        <div class="section2_first scroll_reveal container">
             <h3><span>Introduction</span></h3>
             <p>
                 <span>
@@ -86,7 +87,7 @@
 
     <!-- Section 3 -->
     <section class="section3">
-        <div class="container">
+        <div class="container show">
             <div class="row">
                 <div class="col">
                     <img class="section3-image" src="./src/public/uber1.webp" alt="uber" />
@@ -101,7 +102,7 @@
 
     <!-- Section 4 -->
     <section class="section4">
-        <div>
+        <div class="show2">
             <h4><span>Uber</span></h4>
             <p><span>Accelerating the research and development of new features for millions of riders and
                     drivers.</span></p>
@@ -112,26 +113,37 @@
     <div id="video" class="mainContainer">
         <video class="video" autoplay loop muted src="./src/public/uber_evolution_mobile.mp4"></video>
 
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./src/public/carrusel1.webp" class="d-block w-20 carousel-test" alt="...">
+        <!-- Section 4 -->
+        <section class="section5">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./src/public/carrusel1.webp" class="d-block w-20 carousel-test" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./src/public/carrusel2.webp" class="d-block w-20 carousel-test" alt="...">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="./src/public/carrusel2.webp" class="d-block w-20 carousel-test" alt="...">
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+        </section>
+        <!-- End Section 5 -->
+
+        <!-- Footer -->
+        <footer>
+            <p><span>created by <a target="_blank"
+                        href="https://www.linkedin.com/in/cristian-donnachie-6706aa241/">@c-donnachie</a></span></p>
+        </footer>
+        <!-- End Footer -->
 
         <!-- script -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
